# equityiq

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb
src/equityiq/: __init__.py  fundamental.py  health.py  multiples_valuation.py  projection.py  report.py  signals.py  valuation.py
src/equityiq/data/: __init__.py  fetcher.py
tests/: test_fundamental.py  test_health.py  test_multiples_valuation.py  test_projection.py  test_report.py  test_signals.py  test_valuation.py
